--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">My Application</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="light_mode">Light mode</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="error">Something went wrong..</string>
+    <string name="error_description">An alien is probably blocking your signal.</string>
+    <string name="retry">Retry</string>
 </resources>
